# gha-doc

./: .gitignore  CONTRIBUTING.md  DESIGN.md  Dockerfile  Dockerfile.test  GETTING_STARTED.md  LICENSE  README.md  STATUS.md  action.yml  build.sh  pyproject.toml  requirements.txt  run_tests.sh  test-local.sh
.github/workflows/: test-and-publish.yml
docs/: AI_ENHANCEMENT.md  AI_PROVIDERS.md  CONTRIBUTING_AI_PROVIDERS.md  test-and-publish-diagram.mmd  test-and-publish.html
docs/examples/: 1_example-action.md
examples/: ai-enhancement-examples.md  claude-ai-example.yml  e2e-workflow.yml  github-pages-deploy.yml  huggingface-example.yml  update-docs.yml  workflow-documentation.yml
examples/docs/: deploy-aca-diagram.mmd  deploy-aca.md
examples/workflows/: deploy-aca.yml
output/: test-and-publish.html
src/: ai_enhancer.py  ai_enhancer_improved.py  analyzer.py  generator.py  generator_improved.py  main.py  main_improved.py  parser.py  template_manager.py  visualizer.py  visualizer_improved.py
src/templates/: default.html
test-workspace/.github/workflows/: test-workflow.yml
test-workspace/docs/: test-workflow-diagram.mmd  test-workflow.html  test-workflow.md
tests/: test_ai_enhancer.py  test_analyzer.py  test_consolidation.py  test_generator.py  test_parser.py  test_visualizer.py
